Fixed Large Layout shift

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
   src: url('VT323-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
+
 
 
 /* Visually Hidden Class for Accessibility */
